# pihole-ansible

./: .editorconfig  .gitignore  .gitmodules  01_deployment_pihole.yml  01_foundation.yml  02_add_vpn_user.yml  02_services.yml  03_add_vpn_user.yml  03_recreate_all_containers.yml  03_run_dogger.yml  04_restart_datastore.yml  04_run_dogger.yml  05_start_stack.yml  10_ceph_customizations.yml  99_debug.yml  LICENSE  README.md  Vagrantfile  ansible.cfg  inventory.ini  inventory_dev.ini  inventory_prod.ini  reboot_dev.sh  reinit.sh  requirements.yml  up.py  zhaw_01_iot1_base.yml  zhaw_02_iot1_services.yml  zhaw_inventory_dev_iot1.ini  zhaw_inventory_prod_iot1.ini
group_vars/: all.yml  ceph_all.yml  development.yml  osds.yml  production.yml
handlers/: docker.yml  restart_compose_container.yml  services.yml
roles/datastore/files/syslog-interceptor/: Cargo.toml  config.yml
roles/datastore/files/syslog-interceptor/src/: app_config.rs  main.rs  retry.rs  syslog_app.rs  web_app.rs
roles/datastore/files/syslog-interceptor/src/syslog_app/: error.rs  sender.rs  transformer.rs
roles/datastore/files/syslog-interceptor/src/syslog_app/transformer/: patterns.rs
roles/datastore/files/syslog-interceptor/src/web_app/: duplicati.rs
roles/maintenance/files/backup-helper/: Cargo.toml  Dockerfile
roles/maintenance/files/backup-helper/src/: main.rs
tasks/: collect_system_data.yml  create_self_signed_cert.yml  create_systemd_file.yml  create_user.yml  fix_permissions.yml  pipenv.yml  rsync.yml  standard_service.yml
templates/: docker_file.jinja2  docker_network.jinja2  (+7 more)
(+279 files in other folders)
