[package]
name = "syslog-interceptor"
version = "0.1.0"
authors = ["Anastassios Martakos <anastassios.martakos@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
anyhow = "1.0.32"
regex = "1.3.9"
hostname = "0.3.1"
lazy_static = "1.4.0"
serde = { version = "1.0.115", features = ["derive"] }
config = "0.10.1"
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
reqwest = "0.10.8"
serde_json = "1.0.57"
log = { version = "0.4.11", features = ["serde"] }
tracing = "0.1.19"
tracing-subscriber = "0.2.11"
