[package]
name = "bh"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shiplift = { git = "https://github.com/softprops/shiplift.git", branch = "master" }
anyhow = "1.0.32"
thiserror = "1.0.20"
tokio = { version = "0.2.22", features = ["full"] }
tracing = "0.1.19"
serde = "1.0.116"
bincode = "1.3.1"
futures = "0.3.5"
clap = "3.0.0-beta.1"
tracing-subscriber = "0.2.12"
